Reduced dependencies, added timer pause on submission, added some accessibility features.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="sl">
 <head>
   <meta charset="utf-8">
   <title>Bogglenc</title>
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css" integrity="sha384-Gu3KVV2H9d+yA4QDpVB7VcOyhJlAVrcXd0thEjr4KznfaFPLe0xQJyonVxONa4ZC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400;700" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-light">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js" integrity="sha384-ddhtYrRHpXd/A8DtIIbT015UGAdM0WIkBftdIDiVATuGIKSC7WwX5Q4HDOHIDWTr" defer crossorigin="anonymous"></script>
 </body>
