--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="sl" data-bs-theme="dark">
+<html lang="sl">
 <head>
   <meta charset="utf-8">
   <title>Bogglenc</title>
