--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,17 @@
   <title>Bogglenc</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16x16.png">
   <link rel="manifest" href="assets/site.webmanifest">
-  <link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileColor" content="#3498DB">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" integrity="sha384-Ay26V7L8bsJTsX9Sxclnvsn+hkdiwRnrjZJXqKmkIDobPgIIWBOVguEcQQLDuhfN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css" integrity="sha384-Gu3KVV2H9d+yA4QDpVB7VcOyhJlAVrcXd0thEjr4KznfaFPLe0xQJyonVxONa4ZC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400;700" crossorigin="anonymous">
+  <meta name="theme-color" content="#3498DB">
 </head>
 <body>
   <app-root></app-root>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js" integrity="sha384-ddhtYrRHpXd/A8DtIIbT015UGAdM0WIkBftdIDiVATuGIKSC7WwX5Q4HDOHIDWTr" defer crossorigin="anonymous"></script>
-  <script src="assets/generate-sw.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js" integrity="sha384-ddhtYrRHpXd/A8DtIIbT015UGAdM0WIkBftdIDiVATuGIKSC7WwX5Q4HDOHIDWTr" defer="" crossorigin="anonymous"></script>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
