--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>Bogglenc</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-  <link rel="manifest" href="assets/site.webmanifest">
+  <base href="/" />
+  <link rel="manifest" href="site.webmanifest">
   <meta name="msapplication-TileColor" content="#3498DB">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" integrity="sha384-Ay26V7L8bsJTsX9Sxclnvsn+hkdiwRnrjZJXqKmkIDobPgIIWBOVguEcQQLDuhfN" crossorigin="anonymous">
